--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
+    "nanotimer": "^0.3.14",
     "serialport": "^4.0.7"
   }
 }
