--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "homepage": "https://github.com/harmoniemand/matelight-extreme#readme",
   "dependencies": {
     "chai": "^3.5.0",
+    "get-pixels": "^3.3.0",
+    "jimp": "^0.2.27",
     "mocha": "^3.2.0",
     "nanotimer": "^0.3.14",
     "serialport": "^4.0.7"
