--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/harmoniemand/matelight-extreme#readme",
   "dependencies": {
     "chai": "^3.5.0",
+    "express": "^4.15.3",
     "get-pixels": "^3.3.0",
     "jimp": "^0.2.27",
     "mocha": "^3.2.0",
